src/content/dialog/dialog.css
/* dialog styles
 */
:host,
:host * {
  box-sizing: border-box;
}

:host {
  /* reset inherited html and body styles
   */
  all: initial;

  --gray: #e5e5e5;
  --gray-light: #f4f4f4;
  --gray-lighter: #f7f7f7;
  --gray-dark: #23374d;

  --blue: #1e48b3;
  --blue-light: #0b5ed7;
  --blue-focus: rgb(13 110 253 / 25%);

  --radius: 5px;
  --radius-small: 3px;
  --dialog-height: 250px;
  --footer-height: 40px;
  --padding-x: 12px;
  --padding-y: 8px;

  position: absolute;
  width: 360px;
  height: var(--dialog-height);
  z-index: 2147483646;
  overflow: hidden;

  color: var(--gray-dark);
  font-size: 13px;
  font-family: sans-serif;
  line-height: 1.2;

  border: 1px solid var(--gray);
  border-radius: var(--radius);
  background: #fff;

  box-shadow: 0 1px 2px rgba(0,0,0,0.07),
    0 2px 4px rgba(0,0,0,0.07),
    0 4px 8px rgba(0,0,0,0.07),
    0 8px 16px rgba(0,0,0,0.07);

  display: none;
}

:host([visible]) {
  display: block;

  opacity: 0;
  visibility: visible;
}

:host(.b-dialog-open-animation) {
  animation: .1s open .1s linear 1 forwards;
}

@keyframes open {
  0% {
    opacity: 0;
    transform: scale(.9, .8);
    transform-origin: top;
  }
  60% {
    transform: scale(1);
  }
  100% {
    opacity: 1;
  }
}

/* disable the opening animation
 */
@media (prefers-reduced-motion) {
  :host(.b-dialog-open-animation) {
    animation-duration: 0s;
  }
}

/* general
 */
p {
  margin: 0  0 .5rem 0;
}

/* utilities
 */
.d-flex {
  display: flex;
  align-items: center;
}

.flex-fill {
  flex: 1;
}

.text-secondary {
  color: var(--gray-dark) !important;
}

/* buttons
 */
.btn {
  display: inline-block;
  padding: 4px 10px;
  border: 0;
  border-radius: var(--radius-small);
  background: var(--gray);

  color: var(--gray-dark);
  text-decoration: none;
}

a.btn:hover,
button.btn:hover {
  background: var(--gray-light);

  cursor: pointer;
}

.btn-primary {
  background: var(--blue);

  color: #fff;
}

a.btn-primary:hover,
button.btn-primary:hover {
  background: var(--blue-light);
}

.btn-sm {
  padding: 4px;
}

/* close button
 */
.btn-close {
  --btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");

  width: 1em;
  height: 1em;
  background: transparent var(--btn-close-bg) center/1em auto no-repeat !important;
  opacity: .5;
}

.btn-close:hover {
  opacity: .75;
}

/* icons
 */
.bi {
  display: block;
  max-width: 100%;
  max-height: 100%;
}

/* dialog
 */
.dialog-container {
  display: flex;
  flex-direction: column;
  height: 100%;
}

input[type=search],
.dialog-footer {
  height: var(--footer-height);
  margin: 0 -1px;
  padding: var(--padding-y) var(--padding-x);
  background: var(--gray-light);
  border-style: solid;
  border-color: var(--gray);
}

input[type=search] {
  position: relative;
  border-width: 0 0 1px;

  font-size: 1.1em;
}

input[type=search]:focus {
  outline: none;
  background: var(--gray-lighter);
}

.dialog-info {
  padding: 8px 12px;
  background: #EEF2FC;

  font-size: .9em;
}

.dialog-info a {
  padding: 0 2px;

  font-weight: bold;
  text-decoration: none;
}

.dialog-info a,
.dialog-info a:visited {
  color: var(--blue);
}

.dialog-info a:hover {
  text-decoration: underline;
}

.dialog-templates {
  flex: 1;
  padding: 0 0 20px;
  margin: 0;
  overflow: auto;

  list-style-type: none;

  /* improve performance for rendering large lists
   */
  content-visibility: auto;
  contain-intrinsic-size: auto 350px;
}

.dialog-template-item {
  position: relative;
  width: 100%;
  padding: 8px 12px 8px 9px;
  border-left: 3px solid transparent;

  cursor: pointer;
  color: #161616;
  white-space: nowrap;
}

:host([dir=rtl]) .dialog-template-item {
  border-left: 0;
  border-right: 3px solid transparent;
}

.dialog-template-item h1 {
  display: inline-block;
  margin: 0 4px 0 0;

  font-size: 1.1em;
}

.dialog-template-item h1,
.dialog-template-item p {
  overflow: hidden;

  text-overflow: ellipsis;
}

.dialog-template-item abbr {
  overflow: hidden;
  padding: 0 4px;
  background: var(--gray-lighter);
  border: 1px solid var(--blue-light);
  border-radius: var(--radius-small);

  font-size: 11px;
  font-weight: bold;
  vertical-align: top;
  text-overflow: ellipsis;
}

.dialog-template-item p {
  margin: 0;

  color: #747474;
}

.edit-container {
  position: absolute;
  top: 0;
  right: 0;
  width: 5rem;
  height: 100%;
  padding-right: 0.5rem;
  display: flex;
  align-items: center;
  justify-content: end;
  background: linear-gradient(to right, transparent, var(--gray-lighter) 60%);

  visibility: hidden;
}

:host([authenticated]) li.active .edit-container {
  visibility: visible;
}

.dialog-template-item.active {
  border-color: var(--blue-focus) !important;
  background: var(--gray-lighter);
}

.templates-no-results {
  padding: 20px;

  text-align: center;
}

.dialog-footer {
  display: none;
  position: relative;
  z-index: 2;
  border-width: 1px 0 0;

  font-size: 12px;
}

.dialog-shortcut {
  height: 24px;

  color: rgba(0,0,0,.3);
  font-weight: bold;
  text-align: right;
}

/* tweak spacing added by plus icon
 */
.btn-new-template {
  padding-left: 6px;
}

.btn-new-template .bi {
  margin-top: -1px;
}

/* loading placeholders
 */
.templates-placeholder {
  padding: 8px 12px;
}

.templates-placeholder-text {
  height: 1em;
  width: 50%;
  background-color: var(--gray);
  margin-bottom: 4px;

  cursor: wait;
  animation: glow 2s ease-in-out infinite;
}

.templates-placeholder-text:first-child {
  font-size: 1.1em;
}

.templates-placeholder-description {
  width: 80%;
}

@keyframes glow {
  0% { opacity: .4; }
  50% { opacity: 1; }
  100% { opacity: .4; }
}

/* authenticated state
 */
:host([authenticated]) .dialog-info {
  display: none;
}

:host([authenticated]) .dialog-footer {
  display: block;
}

/* hidden dashboard links - for safari
 */
.dialog-safari .dialog-safari-hide,
.dialog-safari-show {
  display: none !important;
}

.dialog-safari .dialog-safari-show {
  display: revert !important;
}

/* dialog modals
 */
.dialog-modal {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: calc(100% - var(--footer-height));
  background: #fff;
  border-radius: var(--radius) var(--radius) 0 0;

  visibility: hidden;
  opacity: 0;
  transform: translateY(30%) scale(0.95);
  transition: all .075s ease-in;
}

.dialog-modal-header {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: var(--padding-x);

  color: var(--gray-dark);
}

.dialog-modal-header h2 {
  margin: 0;

  opacity: .75;
  font-size: 1em;
  font-weight: bold;
}

.dialog-modal-body {
  padding: var(--padding-y) var(--padding-x);
}

:host([modal=settings]) .dialog-settings {
  visibility: visible;
  opacity: 1;
  transform: translateY(0) scale(1);
}

/* settings
 */
.btn-settings {
  margin-left: .2rem;
}

:host([modal=settings]) .btn-settings {
  background: #cacaca;
}

/* forms
 */
.form-label {
  display: inline-block;
}

.form-select {
  --form-select-bg-img: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");

  appearance: none;
  display: block;
  width: 100%;
  margin-bottom: 0;
  padding: .375rem 2.25rem .375rem .75rem;
  background-color: #fff;
  background-image: var(--form-select-bg-img);
  background-repeat: no-repeat;
  background-position: right .75rem center;
  background-size: 16px 12px;
  border: 1px solid var(--gray);
  border-radius: var(--radius-small);

  color: var(--bs-body-color);
  line-height: 1.5;
}

/* tags
 */

.dialog-tags {
  --tag-color-green: #61bd4f;
  --tag-color-yellow: #f2d600;
  --tag-color-orange: #ff9f1a;
  --tag-color-red: #eb5a46;
  --tag-color-purple: #c377e0;
  --tag-color-blue: #0079bf;
  --tag-color-sky: #00c2e0;
  --tag-color-lime: #51e898;
  --tag-color-pink: #ff78cb;
  --tag-color-black: #344563;

  list-style-type: none;
  padding: 0;
  margin-top: .2rem;

  white-space: nowrap;
}

.dialog-tags li {
  display: inline-block;
  padding: .2em .4em;
  border-radius: var(--radius-small);
  background-color: var(--tag-bg-color, transparent);

  color: #fff;
  font-size: .75em;
  font-weight: 700;
}

